корректируем коэффициенты